chore: remove deprecated -XX:+ZGenerational and -XX:+UseCompactObjectHeaders JVM flags